--- a/CourierCompany/CourierCompany.vcxproj.filters
+++ b/CourierCompany/CourierCompany.vcxproj.filters
@@ -137,5 +137,8 @@
     <Image Include="res\CourierCompany.ico">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\..\bitmap1_acf3336.bmp">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
