--- a/CourierCompany/CourierCompany.vcxproj
+++ b/CourierCompany/CourierCompany.vcxproj
@@ -101,7 +101,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="House.h" />
+    <ClInclude Include="Coordinates.h" />
     <ClInclude Include="FileManager.h" />
+    <ClInclude Include="Road.h" />
     <ClInclude Include="Vehicle.h" />
     <ClInclude Include="CourierCompany.h" />
     <ClInclude Include="CourierCompanyDlg.h" />
@@ -120,7 +123,10 @@
     <ClInclude Include="VehicleLibrary.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="House.cpp" />
+    <ClCompile Include="Coordinates.cpp" />
     <ClCompile Include="FileManager.cpp" />
+    <ClCompile Include="Road.cpp" />
     <ClCompile Include="Vehicle.cpp" />
     <ClCompile Include="CourierCompany.cpp" />
     <ClCompile Include="CourierCompanyDlg.cpp" />
@@ -143,6 +149,7 @@
     <ResourceCompile Include="CourierCompany.rc" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ClassDiagram.cd" />
     <None Include="res\CourierCompany.rc2" />
   </ItemGroup>
   <ItemGroup>
