--- a/CourierCompany/CourierCompany.vcxproj
+++ b/CourierCompany/CourierCompany.vcxproj
@@ -147,6 +147,8 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\..\Desktop\bitmap1.bmp" />
+    <Image Include="..\..\..\..\desktop\bitmap2.bmp" />
+    <Image Include="..\..\..\..\Desktop\bitmapa.bmp" />
     <Image Include="res\CourierCompany.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
