--- a/CourierCompany/CourierCompany.vcxproj
+++ b/CourierCompany/CourierCompany.vcxproj
@@ -105,13 +105,14 @@
     <ClInclude Include="Coordinates.h" />
     <ClInclude Include="FileManager.h" />
     <ClInclude Include="MapLibrary.h" />
+    <ClInclude Include="Package.h" />
+    <ClInclude Include="PackageList.h" />
     <ClInclude Include="Road.h" />
     <ClInclude Include="Vehicle.h" />
     <ClInclude Include="CourierCompany.h" />
     <ClInclude Include="CourierCompanyDlg.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Library.h" />
-    <ClInclude Include="Package.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="StartWindowDlg.h" />
@@ -128,13 +129,14 @@
     <ClCompile Include="Coordinates.cpp" />
     <ClCompile Include="FileManager.cpp" />
     <ClCompile Include="MapLibrary.cpp" />
+    <ClCompile Include="Package.cpp" />
+    <ClCompile Include="PackageList.cpp" />
     <ClCompile Include="Road.cpp" />
     <ClCompile Include="Vehicle.cpp" />
     <ClCompile Include="CourierCompany.cpp" />
     <ClCompile Include="CourierCompanyDlg.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Library.cpp" />
-    <ClCompile Include="Package.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="StartWindowDlg.cpp" />
     <ClCompile Include="stdafx.cpp">
